Fixed: Large log messages won't force the timestamp off screen

--- a/src/UI/Cells/cells.less
+++ b/src/UI/Cells/cells.less
@@ -191,3 +191,8 @@ td.delete-episode-file-cell {
     padding-right : 0px;
   }
 }
+
+.log-message-cell {
+  word-break: break-all;
+  word-wrap: break-word;
+}
